src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Contract_Terms_months__c</fullName>
        <inlineHelpText>Defaults to Opp Contract Terms</inlineHelpText>
        <label>Contract Terms (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neo4j_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Neo4j Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <inlineHelpText>Defaults to Opp Term End Date</inlineHelpText>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <formula>Opportunity.Term_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Must equal to Opp Term Start Date</inlineHelpText>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>external_id_for_n4jSFDC_sandbox_use_only__c</fullName>
        <description>Visible to admins only. Populated only on a named/small set of records in sandboxes to help relationally-reconstruct specific data in partial copy environments (This fields helps admins combat the random sampling nature of partial copy environments)</description>
        <externalId>true</externalId>
        <inlineHelpText>Visible to admins only. Populated only on a named/small set of records in sandboxes to help relationally-reconstruct specific data in partial copy environments (This fields helps admins combat the random sampling nature of partial copy environments)</inlineHelpText>
        <label>external id for n4jSFDC sandbox use only</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prohibit_Quote_Name_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED( Name ),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
        <errorMessage>Quote Name is not editable</errorMessage>
    </validationRules>
</CustomObject>